# ai-ct

./: App.tsx  README.md  docker-compose.yml  index.html  metadata.json  package.json  types.ts
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  feedback.py  notification.py  record.py  user.py
backend/app/routers/: __init__.py  feedback.py  notifications.py  records.py  upload.py  users.py
backend/app/schemas/: __init__.py  response.py
components/: BottomNav.tsx
docs/plans/: 2026-01-15-flutter-migration-design.md  2026-01-15-flutter-migration.md
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: app.dart  main.dart
flutter_app/lib/l10n/: app_en.arb  app_zh.arb
flutter_app/lib/models/: notification.dart  record.dart  user_profile.dart
flutter_app/lib/providers/: locale_provider.dart  notification_provider.dart  record_provider.dart  user_provider.dart
flutter_app/lib/services/: feedback_service.dart  notification_service.dart  record_service.dart  upload_service.dart  user_service.dart
flutter_app/linux/: CMakeLists.txt  my_application.cc
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
pages/: EditProfile.tsx  Feedback.tsx  Files.tsx  Home.tsx  Notifications.tsx  Profile.tsx  Report.tsx
(+26 files in other folders)
